# cx-core-schemas

./: README.md  pyproject.toml
src/cx_core_schemas/: api_catalog.py  connector_script.py  notebook.py  vfs.py
