[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cx-core-schemas"
version = "0.1.0"
description = "Public Pydantic data contract schemas for the core Contextually platform and blueprint ecosystem."
authors = [
    { name = "David Wanjala", email = "dp.wanjala@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0,<3.0"
]

[tool.setuptools.packages.find]
where = ["src"]
